[workspace]
members = [
    "crates/rx11-core",
    "crates/rx11-server",
    "crates/rx11-client",
    "crates/rx11-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
toml = "0.8"
flate2 = "1"
lz4_flex = "0.11"
zstd = "0.13"
