[package]
name = "rx11-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
flate2 = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
uuid = { workspace = true }
